# mengze

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  imgui.ini
mengze/: CMakeLists.txt  gltf_loader.cpp  gltf_loader.h  main.cpp  zbuffer.h
mengze/core/: application.cpp  application.h  image.cpp  image.h  imgui_build.cpp  layer.h  logging.h  timer.h
mengze/core/input/: input.cpp  input.h  key_codes.h
mengze/hidden_surface/: app.cpp  app.h  depth_mipmap.h  geometry.cpp  gui.h  hierarchical_zbuffer.h  octree.cpp  polygon.cpp  polygon.h  rasterizer.cpp  scanline_zbuffer.h
mengze/ray_tracing/: aabb.h  app.cpp  app.h  bvh.cpp  bvh.h  camera.cpp  camera.h  hittable.cpp  hittable.h  material.cpp  material.h  math.cpp  math.h  pdf.cpp  pdf.h  ray.cpp  ray.h  renderer.cpp  renderer.h  scene.cpp  scene.h  sphere.h  texture.cpp  texture.h  triangle.cpp  triangle.h
mengze/rendering/: camera.cpp  camera.h  render_layer.cpp  render_layer.h  renderer.cpp  renderer.h
mengze/scene_graph/: component.h  node.cpp  node.h  scene.cpp  scene.h
mengze/scene_graph/components/: transform.cpp  transform.h
mengze/util/: color.h  math.h
mengze/visible_surface_determination/: depth_mipmap.cpp  edge_table.h  geometry.cpp  geometry.h  gui.h  hierarchical_struct.cpp  hierarchical_struct.h  hierarchical_zbuffer.cpp  hierarchical_zbuffer.h  naive_zbuffer.h  octree.h  rasterizer.cpp  rasterizer.h  scanline_zbuffer.h  ui_layer.h  zbuffer.h
scenes/bathroom/: bathroom.mtl  bathroom.xml
